--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 3.12)
 project(main)
 
 set(MIN_COMPILE "-O2 -Os -DNDEBUG -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MIN_COMPILE}")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${MIN_COMPILE}")
 
-include_directories(src/)
-file(GLOB_RECURSE src "src/*.cpp" "src/*.c")
-add_executable(${PROJECT_NAME} ${SYSTEM} ${src} ${dep})
-target_link_libraries(${PROJECT_NAME})
+add_executable(1126_standard_mps_mk_particle 1126_standard_mps/mk_particle.cpp)
+add_executable(1126_standard_mps_main 1126_standard_mps/main.cpp)
+add_executable(1126_standard_mps_main_structure 1126_standard_mps/main_structure.cpp)
+add_executable(1126_standard_mps_main_2d 1126_standard_mps/main_2d.cpp)
+# target_link_libraries(1126_standard_mps_dambreak)
