--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(1126_standard_mps_mk_particle 1126_standard_mps/mk_particle.cpp)
 add_executable(1126_standard_mps_main 1126_standard_mps/main.cpp)
 add_executable(1126_standard_mps_main_structure 1126_standard_mps/main_structure.cpp)
 add_executable(1126_standard_mps_main_2d 1126_standard_mps/main_2d.cpp)
+add_executable(1127_cmps_init20cm 1127_cmps/init20cm.cpp)
 # target_link_libraries(1126_standard_mps_dambreak)
