main_bucket with new format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,6 @@ add_executable(1126_standard_mps_main 1126_standard_mps/main.cpp)
 add_executable(1126_standard_mps_main_structure 1126_standard_mps/main_structure.cpp)
 add_executable(1126_standard_mps_main_2d 1126_standard_mps/main_2d.cpp)
 add_executable(1127_cmps_init20cm 1127_cmps/init20cm.cpp)
+add_executable(1127_cmps_initCollapse 1127_cmps/initCollapse.cpp)
+add_executable(1127_cmps_main_bucket 1127_cmps/main_bucket.cpp)
 # target_link_libraries(1126_standard_mps_dambreak)
