--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(1127_cmps_init20cm 1127_cmps/init20cm.cpp)
 add_executable(1127_cmps_initCollapse 1127_cmps/initCollapse.cpp)
 add_executable(1127_cmps_main_bucket 1127_cmps/main_bucket.cpp)
 add_executable(1127_cmps_main_bucket2 1127_cmps/main_bucket2.cpp)
+add_executable(1127_cmps_cmps 1127_cmps/cmps.cpp)
 # target_link_libraries(1126_standard_mps_dambreak)
