--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,5 @@ add_executable(1127_cmps_main_bucket 1127_cmps/main_bucket.cpp)
 add_executable(1127_cmps_main_bucket2 1127_cmps/main_bucket2.cpp)
 add_executable(1127_cmps_cmps 1127_cmps/cmps.cpp)
 add_executable(1128_mps_mps 1128_mps/mps.cpp)
+add_executable(1129_cmps_cmps 1129_cmps/cmps.cpp)
 # target_link_libraries(1126_standard_mps_dambreak)
