--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ add_executable(1127_cmps_main_bucket2 1127_cmps/main_bucket2.cpp)
 add_executable(1127_cmps_cmps 1127_cmps/cmps.cpp)
 add_executable(1128_mps_mps 1128_mps/mps.cpp)
 add_executable(1129_cmps_cmps 1129_cmps/cmps.cpp)
+add_executable(1129_cmps_collapse 1129_cmps/initCollapse.cpp)
+add_executable(1129_cmps_1m 1129_cmps/init1m.cpp)
 # target_link_libraries(1126_standard_mps_dambreak)
